# opensmtpd-filter-dkimout

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
man/en/: filter-dkimout.8
migrations/: 20230409141801_initial.sql
src/: action.rs  algorithm.rs  canonicalization.rs  config.rs  db.rs  entry.rs  handshake.rs  key.rs  logs.rs  main.rs  message.rs  parsed_message.rs  signature.rs  stdin_reader.rs
test_samples/: mailparse_test_email_01.txt  man_7_smtpd-filters.txt  single_message.txt  single_message_raw.txt  single_message_with_boundaries.txt
tests/: key-db.sqlite3  start_test.py  test_01.msg  test_03.msg
