[package]
name = "opensmtpd-filter-dkimout"
version = "0.1.0"
authors = ["Rodolphe Bréard <rodolphe@what.tf>"]
edition = "2021"
description = "DKIM filter for OpenSMTPD"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
clap = { version = "4.1.13", default-features = false, features = ["std", "derive"] }
env_logger = { version = "0.10.0", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
log = { version = "0.4.17", default-features = false }
nom = { version = "7.1.3", default-features = false }
tokio = { version = "1.27.0", default-features = false, features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync", "time", "process"] }
