[package]
name = "filter-dkimout"
version = "0.1.0"
authors = ["Rodolphe Bréard <rodolphe@what.tf>"]
edition = "2021"
description = "DKIM filter for OpenSMTPD"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = { version = "1.0.70", default-features = false, features = ["std"] }
base64 = { version = "0.21.0", default-features = false, features = ["std"] }
clap = { version = "4.1.13", default-features = false, features = ["derive", "std"] }
ed25519-dalek = { version = "2.0.0-rc.2", default-features = false, features = ["asm", "fast", "rand_core"] }
env_logger = { version = "0.10.0", default-features = false }
futures = { version = "0.3.28", default-features = false }
log = { version = "0.4.17", default-features = false }
nom = { version = "7.1.3", default-features = false }
rand = { version = "0.8.5", default-features = false }
rsa = { version = "0.9.0", default-features = false, features = ["sha2", "std"] }
sha2 = { version = "0.10.6", default-features = false, features = ["asm"] }
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-native-tls", "macros", "migrate", "sqlite", "time"] }
tokio = { version = "1.27.0", default-features = false, features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync", "time", "process"] }
uuid = { version = "1.3.1", default-features = false, features = ["v4", "fast-rng"] }
